# ConwayDuel

./: .gitignore  Cargo.toml  README.md  Trunk.toml  gradle.properties  gradlew  index.html  settings.gradle  spy.py  tc.py  tsconfig.json  v3.py  xf.py  zz.py  填充.py
.github/workflows/: build-apk.yml  build.yml  deploy-pages.yml  deploy.yml  构建.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/conwayduel/: AiLogic.kt  BattleFieldView.kt  GameEntity.kt  MainActivity.kt
scripts/: build.sh  check.sh  deploy-github.sh  deploy.sh
src/: app.rs  config.rs  lib.rs  main.ts  style.css
src/assets/css/: fullscreen.css
src/core/: mod.rs
src/core/ai/: mod.rs
src/core/combat/: mod.rs
src/core/modes/: mod.rs
src/core/physics/: mod.rs
src/core/render/: mod.rs
src/core/skills/: mod.rs
src/ecs/: components.rs  events.rs  mod.rs
src/ts/hooks/: useResize.ts
src/ts/types/: game.d.ts
src/ts/utils/: device.ts
