[package]
name = "conway-duel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
glam = { version = "0.25", features = ["bytemuck"] }
hecs = "0.10"
glow = "0.13"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "Window",
  "Performance",
  "Document",
  "ResizeObserver",
  "ResizeObserverEntry",
] }

[profile.release]
opt-level = "s"
lto = true
